--- a/assets/css/loginbg.css
+++ b/assets/css/loginbg.css
@@ -4,9 +4,9 @@ body, html {
 }
 .bg-image
 {
-	background-image:url("fms.jpg");
+	background-image:url("mm2-e1540816846523-1024x576.jpeg");
 	 /* Add the blur effect */
-  filter: blur(2px);
+  /*filter: blur(2px);
   -webkit-filter: blur(2px);
   
   /* Full height */
