--- a/assets/css/loginbg.css
+++ b/assets/css/loginbg.css
@@ -4,7 +4,7 @@ body, html {
 }
 .bg-image
 {
-	background-image:url("mm2-e1540816846523-1024x576.jpeg");
+	background-image:url("student-fee.png");
 	 /* Add the blur effect */
   /*filter: blur(2px);
   -webkit-filter: blur(2px);
