--- a/assets/css/loginbg.css
+++ b/assets/css/loginbg.css
@@ -6,7 +6,7 @@ body, html {
 {
 	background-image:url("school-accounting-software.jpeg");
 	 /* Add the blur effect */
-  /*filter: blur(2px);
+  filter: blur(2px);
   -webkit-filter: blur(2px);
   
   /* Full height */
