--- a/assets/css/loginbg.css
+++ b/assets/css/loginbg.css
@@ -33,3 +33,10 @@ body, html {
   padding: 20px;
   text-align: center;
 }
+
+.border{
+  display: inline-block;
+    width: 70px;
+    height: 70px;
+    margin: 6px;
+       }
