--- a/assets/css/loginbg.css
+++ b/assets/css/loginbg.css
@@ -4,7 +4,7 @@ body, html {
 }
 .bg-image
 {
-	background-image:url("school-accounting-software.jpeg");
+	background-image:url("ep-blog9-main.png");
 	 /* Add the blur effect */
   filter: blur(2px);
   -webkit-filter: blur(2px);
