--- a/assets/css/loginbg.css
+++ b/assets/css/loginbg.css
@@ -6,8 +6,8 @@ body, html {
 {
 	background-image:url("ep-blog9-main.png");
 	 /* Add the blur effect */
-  filter: blur(0px);
-  -webkit-filter: blur(0px);
+  /*filter: blur(0px);
+  -webkit-filter: blur(0px);/*
   
   /* Full height */
   height: 100%; 
@@ -37,4 +37,3 @@ body, html {
 
 .dotted{
   border-style: groove;
-}
