--- a/assets/css/loginbg.css
+++ b/assets/css/loginbg.css
@@ -4,7 +4,7 @@ body, html {
 }
 .bg-image
 {
-	background-image:url("ep-blog9-main.png");
+	background-image:url("fms.jpg");
 	 /* Add the blur effect */
   /*filter: blur(0px);
   -webkit-filter: blur(0px);/*
